src/test/test_cases/valid/forLoop/simpleForLoop.wacc
# simple for loop

# Output:
# #empty#

# Program:

begin
 for (int i = 0, i < 5) do
   skip
 done
end