src/test/test_cases/invalid/syntaxErr/forLoop/dunErr.wacc
# done type

# Output:
# syntax_error#

# Exit:
# 100

# Program:

begin
  for (int i = 0, i <= 10) do
    skip
  dun
end